ProdIND/ProdPrograms/force-app/main/default/objects/DSA_RC_Limit__c/DSA_RC_Limit__c.object-meta.xml
<CustomObject>
    <label>DSA_RC_Limit</label>
    <nameField>
        <label>DSA_RC_Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DSA_RC_Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>