ProdIND/ProdPrograms/force-app/main/default/objects/DSA_RC_Limit__c/fields/Addl_Amount__c.field-meta.xml
<CustomField>
    <fullName>Addl_Amount__c</fullName>
    <label>Addl_Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>