ProdIND/ProdPrograms/force-app/main/default/objects/DSA_RC_Limit__c/fields/Addl_Days__c.field-meta.xml
<CustomField>
    <fullName>Addl_Days__c</fullName>
    <label>Addl_Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>