ProdIND/ProdPrograms/force-app/main/default/objects/DSA_RC_Limit__c/fields/Addl_Limit__c.field-meta.xml
<CustomField>
    <fullName>Addl_Limit__c</fullName>
    <label>Addl_Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>