ProdIND/ProdPrograms/force-app/main/default/objects/DSA_RC_Limit__c/fields/Ben_Code__c.field-meta.xml
<CustomField>
    <fullName>Ben_Code__c</fullName>
    <externalId>true</externalId>
    <label>Ben_Code</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>