ProdIND/ProdPrograms/force-app/main/default/objects/DSA_RC_Limit__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <label>Broker</label>
    <length>1</length>
    <type>Text</type>
</CustomField>