ProdIND/ProdPrograms/force-app/main/default/objects/DSA_RC_Limit__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>1</length>
    <type>Text</type>
</CustomField>