ProdIND/ProdPrograms/force-app/main/default/objects/DSA_RC_Limit__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <label>Effective_From</label>
    <type>DateTime</type>
</CustomField>