ProdIND/ProdPrograms/force-app/main/default/objects/DSA_RC_Limit__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <label>Effective_To</label>
    <type>DateTime</type>
</CustomField>