ProdIND/ProdPrograms/force-app/main/default/objects/DSA_RC_Limit__c/fields/Maker_Date__c.field-meta.xml
<CustomField>
    <fullName>Maker_Date__c</fullName>
    <label>Maker_Date</label>
    <type>DateTime</type>
</CustomField>