ProdIND/ProdPrograms/force-app/main/default/objects/DSA_RC_Limit__c/fields/Max_Limit__c.field-meta.xml
<CustomField>
    <fullName>Max_Limit__c</fullName>
    <label>Max_Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>