ProdIND/ProdPrograms/force-app/main/default/objects/DSA_RC_Limit__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>1</length>
    <type>Text</type>
</CustomField>