ProdIND/ProdPrograms/force-app/main/default/objects/DSA_RC_Limit__c/fields/RC_Limit_flag__c.field-meta.xml
<CustomField>
    <fullName>RC_Limit_flag__c</fullName>
    <label>RC_Limit_flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>