ProdIND/ProdPrograms/force-app/main/default/objects/DSA_RC_Limit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ben_Code__c</columns>
    <columns>Max_Limit__c</columns>
    <columns>Broker__c</columns>
    <columns>RC_Limit_flag__c</columns>
    <columns>Status_Flag__c</columns>
    <columns>Product__c</columns>
    <columns>Effective_To__c</columns>
    <columns>Effective_From__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ben_Code__c</field>
        <operation>contains</operation>
        <value>086772</value>
    </filters>
    <label>All</label>
</ListView>